<resources>
    <string name="app_name">elite</string>
    <string name="user_password">密码</string>
    <string name="user_registered">注册</string>
    <string name="user_login">登录</string>
    <string name="user_tips">未注册？</string>
    <string name="hello">TODO</string>
    <string name="community_title">知识星球</string>
    <string name="a_month_ago">一个月前</string>
    <string name="a_week_ago">一周前</string>
    <string name="about">关于</string>
    <string name="about_distribution">关于「分享有赏」</string>
    <string name="about_file">关于文件</string>
    <string name="about_us">了解我们</string>
    <string name="about_xmq">关于知识星球</string>
    <string name="accept_this_group_dynamic">动态内显示主题更新</string>
    <string name="access_sd_card_failed_notify">没有读写权限或者没有SD卡</string>
    <string name="account_login">帐号登录</string>
    <string name="account_restricted_for_use">帐号已被限制使用</string>
    <string name="active_group_rank">活跃星球排行榜</string>
    <string name="add">添加</string>
    <string name="add_answer">添加回答…</string>
    <string name="add_confirm_message">填写验证信息(0–30字)</string>
    <string name="add_file">添加文件</string>
    <string name="add_hashtag">添加标签</string>
    <string name="add_hashtag_with_plus">+添加标签</string>
    <string name="add_new_hashtag">添加新标签</string>
    <string name="admin">管理员</string>
    <string name="admire">赏</string>
    <string name="advertisement">垃圾广告</string>
    <string name="agree">同意</string>
    <string name="alert.cancel_edited_topic">要取消修改吗？</string>
    <string name="alert.delete_answer">要删除回答吗？</string>
    <string name="alert.delete_question">要删除提问吗？</string>
    <string name="alert.delete_topic">要删除主题吗？</string>
    <string name="alert.essence_topic">设置后将显⽰在精华主题列表</string>
    <string name="alert.ignore_topic">要忽略主题吗？</string>
    <string name="alert.sticky_topic">该主题将显示在时间线上方并取代之前的置顶主题</string>
    <string name="alert.unset_essence_topic">设置后将不再显⽰在精华主题列表</string>
    <string name="alert.unset_sticky_topic">该主题不再显示在时间线的上方</string>
    <string name="alert_apply_refund_dest">购买三天内未赠出的礼品卡可以申请退款</string>
    <string name="alert_apply_refund_title">确定申请退款吗？</string>
    <string name="alert_cannot_question_after_deadline">上一周期服务已结束，不可发起提问</string>
    <string name="alert_close_sticky_topic">关闭后，如有新置顶会重新显示，确定关闭置顶？</string>
    <string name="alert_exit_locked_group">确定退出星球？</string>
    <string name="alert_exit_payment_group_after_three_days">退出后可在有效期内（即%1$s）免费加入</string>
    <string name="alert_exit_payment_group_in_three_days">退出后可在有效期内（即%1$s）免费加入，若需要申请退款，请联系知识星球公众号</string>
    <string name="alert_owner_exit_group">星球内还有其他成员，星主不能退出星球</string>
    <string name="alert_request_auth_failure">身份认证过期或者失败，请重新登录</string>
    <string name="alert_set_group_not_allow_join">关闭后新用户将无法加入</string>
    <string name="alert_share_invite_code">分享到微信，你的好友可以直接点击链接创建星球。</string>
    <string name="all">全部</string>
    <string name="all_member">所有人</string>
    <string name="all_picture">全部图片</string>
    <string name="all_search_group_content">允许星球外用户搜索到星球和内容</string>
    <string name="all_topics">全部主题</string>
    <string name="allow_anonymous_question">允许匿名提问</string>
    <string name="allow_pay_for_read_topic_description">开启后，非星球内用户在微信内支付一元可查看单个主题，发表者可获得收益</string>
    <string name="allow_private_chat">允许成员私聊</string>
    <string name="allow_share_topic_description">开启后，可以分享到微信、朋友圈，生成长图</string>
    <string name="allow_view_member_list">开放星球成员列表</string>
    <string name="allowed_examination">已同意审批请求</string>
    <string name="already_received">已领取</string>
    <string name="already_refunded">已退款</string>
    <string name="already_used">已使用</string>
    <string name="amount">金额</string>
    <string name="amount_too_big">金额太大了</string>
    <string name="amount_too_small">金额太小了</string>
    <string name="analog_network_data">本地模拟网络数据</string>
    <string name="and">和</string>
    <string name="anonymous">匿名</string>
    <string name="anonymous_user">匿名用户</string>
    <string name="answer_a_question">回答了问题</string>
    <string name="answer_again">重新回答</string>
    <string name="answer_by_text">文字回答</string>
    <string name="answer_by_voice_scan_qr_code_to_see_the_answer">使用了语音回答该问题，请扫描二维码查看答案</string>
    <string name="answered_it">回答了：</string>
    <string name="api_not_exist">无法访问服务器</string>
    <string name="aply_answer">添加回答</string>
    <string name="app_slogan">way to share and explore </string>
    <string name="app_slogan_with_app_name">知识星球-连接一千位铁杆粉丝</string>
    <string name="app_story">知识星球由来</string>
    <string name="app_updating">正在获取最新版本信息…</string>
    <string name="app_user_agreement">《知识星球用户协议》</string>
    <string name="app_user_agreement2">知识星球用户协议</string>
    <string name="app_user_agreement_update_desc">知识星球致力于建设共赢的知识平台，尊重用户的选择并严格遵守相关法律法规的要求。为了更好地服务用户，我们对《知识星球用户协议》进行了更新，请先阅读内容后再继续使用知识星球。</string>
    <string name="app_user_agreement_warn_desc">若不同意《知识星球用户协议》，将不能继续使用知识星球</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied_groups">待审批的星球</string>
    <string name="applied_groups_desc">待审批的付费星球，若星主72小时内未通过您的申请，费用将原路退回（仅显示最近三天的申请）。</string>
    <string name="apply_for_join_group">申请加入星球</string>
    <string name="apply_refund">申请退款</string>
    <string name="apply_refund_alert">退款申请发出后不可撤销</string>
    <string name="apply_refund_notice">用户加入星球后，三天内可以申请退出星球并退款，请填写退款理由。</string>
    <string name="apply_refund_reason_hint">退款理由（必填）</string>
    <string name="apply_withdraw">申请提现</string>
    <string name="approval_list">审批列表</string>
    <string name="approval_request">审批请求</string>
    <string name="ask_a_question">发表了提问</string>
    <string name="ask_goto_need_bind_wx">需要绑定微信才能付费提问，现在去绑定？</string>
    <string name="ask_without_we_chat_installed">你还没有安装微信，不能进行付费提问</string>
    <string name="audition">试听</string>
    <string name="avatar">头像</string>
    <string name="back">回到</string>
    <string name="background_upgrade">后台更新</string>
    <string name="balancing_money">待结算金额</string>
    <string name="been_isolated">已拉黑</string>
    <string name="been_shielded">（已屏蔽）</string>
    <string name="before">前</string>
    <string name="begin_time">开始时间</string>
    <string name="bind_now">立即绑定</string>
    <string name="bind_phone_to_enjoy_all_features">请先绑定⼿机号码，绑定成功即可体验完整功能</string>
    <string name="bind_we_chat">绑定微信</string>
    <string name="bind_we_chat_copy_writer">"邮箱帐号绑定微信后，可直接使用微信登录
知识星球，使用更便捷"</string>
    <string name="bind_we_chat_failed">绑定微信失败</string>
    <string name="binding_now">立即绑定</string>
    <string name="binding_phone_number">绑定手机号码</string>
    <string name="binding_phone_number_desc">为确保您帐号的安全及正常使用，依据《网络安全法》相关要求，进行下一步操作需绑定手机，感谢您的理解及支持!</string>
    <string name="binding_success">绑定成功</string>
    <string name="blacklist">黑名单</string>
    <string name="blocked_tip_content">您的帐号由于违反相关规定，已被限制使用。</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="build_days_and_member_count">%1$s 创建%2$d天，成员%3$s</string>
    <string name="bulk_handle_examination_user">确定%1$s %2$d 个成员加入申请?</string>
    <string name="bulk_operation">批量操作</string>
    <string name="by_default">默认</string>
    <string name="camera">拍照</string>
    <string name="can_not_get_external_cache">无法获取储存目录</string>
    <string name="can_not_interaction_after_renew">续费后才可参与星球内互动</string>
    <string name="can_not_join_group_after_renew">该星球的付费有效期已过期，需星主设置续期后才可以加⼊</string>
    <string name="can_withdraw_amount">可提现金额</string>
    <string name="cancel">取消</string>
    <string name="cancel_subscribe">取消收藏</string>
    <string name="cannot_find_file">找不到文件</string>
    <string name="cannot_question_self">不能向自己提问</string>
    <string name="cannot_reward_question_topic">不能赞赏提问</string>
    <string name="cannot_reward_self">不能给自己赞赏哦</string>
    <string name="card_view_state">宫格视图</string>
    <string name="change_style">换个样式</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charge_off_amount">出账金额</string>
    <string name="check_update">检查新版本</string>
    <string name="check_upgrade_failed">检查更新失败</string>
    <string name="checking_order">正在校验订单…</string>
    <string name="choose_category_notify">选择所属星球类别 (必选)</string>
    <string name="did_not_answer_questions">未回答提问</string>
    <string name="file_topics">文件主题</string>
    <string name="group_owner_topics">只看星主</string>
    <string name="image_topics">图片主题</string>
    <string name="my_money">我的零钱</string>
    <string name="need_bind_wechat">需要绑定微信</string>
    <string name="question_and_answer_topics">问答主题</string>
    <string name="renew_notice_item1">1.公开和私密指的是什么？</string>
    <string name="renew_notice_item1_content">答：公开是指星球允许任何人加入（不需要认证），私密是指星球加入人员由创建人主导。</string>
    <string name="renew_notice_item2">2.知识星球会收取手续费吗？</string>
    <string name="renew_notice_item2_content">答：不会，这是知识星球创建者送给高效研发团队的礼物。</string>
    <string name="renew_notice_item3">3.知识星球的内容会被泄露吗？</string>
    <string name="renew_notice_item3_content">答：不会，因为平台不以盈利为目的，不存在商业合作。</string>
    <string name="usual_question">常见问题</string>
    <string name="view_by_filter_content">查看指定内容</string>
    <string name="withdraw">提现</string>
    <string name="withdrawable_money">可提现金额</string>
    <string name="publish_topic">#求职# Android 开发</string>
    <string name="publish_content">热爱 Android 开发 ···</string>
    <string name="item_publish_topic">招聘/求职/跳槽</string>
    <string name="item_publish_time">2017/9/19</string>
    <string name="item_collection">历经一个多月，我终于在南京找到了一份非常棒的 android 开发工作了，当时也询问···</string>
    <string name="name_collecton">小之</string>
    <string name="wallet_cash">¥ 0</string>
    <string name="rule_item_01">  知识星球一直致力于为用户提供文明健康、规范有序的网络环境，含淫秽、色情、低俗、暴力、时政、新闻、盗版和引诱信息的星球，不仅违反了《知识星球用户协议》和《知识星球星主规则》相关规范，也违反了国家法律法规，我们坚决进行清理、清退。</string>
    <string name="rule_item_02">  我们都希望有一个健康的网络环境，作为运营者，对淫秽、色情、低俗、暴力、时政、新闻、盗版和引诱信息"零容忍"，清除星球内此类有害新闻、锁定星球和封禁相关账号是我们的权限和义务。而对于每一个用户，也希望你们和我们一起维护和营造健康纯净的知识星球环。</string>
    <string name="rule_item_03">  星主行为规范：本规则所述信息内容是指星球范围内，星主、星球内成员在使用知识星球服务过程中所制作、复制、发布、传播的任何内容，包括但不限于知识星球账号、昵称、星球介绍、星球内交流分享中等以网页、文字、图片、音频、图标、电子文件等形式在知识星球平台范围内发布、传送、传播的全部内容。</string>
    <string name="rule_item_04">  星主应保证其对所制作、复制、发布、传播的信息内容拥有完整有效的知识产权授权，且星主理解并统一为保障文明、健康、和谐的星球生态环境，星主应在制作、复制、发布、传播信息内容过程中遵从如下规定，</string>
    <string name="rule_item_05">(i)      反对宪法确定的基本原则的内容；</string>
    <string name="rule_item_06">(ii)     危害国家统一、主权和领土完整的内容；</string>
    <string name="rule_item_07">(iii)   泄露国家秘密、危害国家安全或者损害国家荣誉和利益的内容；</string>
    <string name="rule_item_08">(iv)   煽动民族仇恨、民族歧视，破坏民族团结，或者侵害民族风俗、习惯的内容；</string>
    <string name="rule_item_09">(v)     宣扬邪教、迷信的内容；</string>
    <string name="rule_item_10">(vi)   发布散布谣言，扰乱社会秩序，破坏社会稳定的内容；</string>
    <string name="rule_item_11">(vii)  发布宣扬淫秽、赌博、暴力或者教唆犯罪的内容；</string>
    <string name="rule_item_12">(viii)  发布侮辱或者诽谤他人，侵害他人合法权益的内容；</string>
    <string name="rule_item_13">(ix)   发布危害社会公德或者民族优秀文化传统的内容；</string>
    <string name="rule_item_14">(x)     发布不符合国家相关法律法规规定的广告，包括但不限于发布国家禁止发布的广告内容，未事先经过有关部门的审查但法律法规要求审查的广告内容等；</string>
    <string name="rule_item_15">(xi)   发布其他法律、行政法规和国家规定禁止的内容。</string>
    <string name="IsPlanet">知识星球是什么？</string>
    <string name="planet_origin_01">知识星球是创作者为高校科研团队提供的一个知识共享的平台，实现高校科研团队知识共享的工具</string>
    <string name="planet_origin_02">你们为什么做知识星球？</string>
    <string name="planet_origin_03">创新是知识经济时代的灵魂，高校科研团队作为国家创新主体的重要组成部分，肩负着发展科学技术和培养人才的重要使命。高校科研团队是典型的知识型团队，知识在团队活动中起着重要作用，团队的发展离不开知识的共享，知识共享是知识创造的前提和基础。</string>
    <string name="planet_origin_04">谁会是知识星球合适的用户</string>
    <string name="planet_origin_05">我们的用户可能是来自高效实验室的科研团队，也可以是学生自由组合的科研团队…他们形成一个圈子，有共同的爱好与目标，有互动的欲望，在一起，就能创造更大的价值</string>
    <string name="planet_origin_06">知识星球能带来什么好处？</string>
    <string name="planet_origin_07">1.更方便地聚集团队成员做轻松和纯粹的讨论；2.团队项目可以得到高效的管理；</string>
    <string name="planet_origin_08">知识星球的含义是什么？</string>
    <string name="planet_origin_09">我们希望每一个内容创造者都能创建自己的星球，将知识散布到星球的每一个角落</string>
</resources>