<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".com.emily.my.OriginActivity">

    <include layout="@layout/toolbar_origin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="3dp"
        android:background="@color/material_grey_300"
        tools:ignore="PrivateResource" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IsPlanet"
                android:textSize="@dimen/text_size_xxl"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_origin_01"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_size_xxl" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_origin_02"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_size_xxl"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_origin_03"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_size_xl"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_origin_04"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_size_xxl"
                android:textColor="@color/green"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_origin_05"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_size_xl"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_origin_06"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_size_xxl"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_origin_07"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_size_xl"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_origin_08"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_size_xxl"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_origin_09"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_size_xl"/>




        </LinearLayout>


    </ScrollView>

</LinearLayout>