<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".com.emily.planet.UsuallyProblemActivity">

    <include layout="@layout/toolbar_create_planet" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="3dp"
        android:background="@color/material_grey_300"
        tools:ignore="PrivateResource" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renew_notice_item1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_xxl"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/renew_notice_item1_content"
            android:textSize="@dimen/text_size_l"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/renew_notice_item2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_xxl"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/renew_notice_item2_content"
            android:textSize="@dimen/text_size_l"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renew_notice_item3"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size_xxl"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/renew_notice_item3_content"
            android:textSize="@dimen/text_size_l"/>


    </LinearLayout>


</LinearLayout>