<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:padding="8dp"
    android:background="@drawable/shape_item_my_publish">

    <TextView
        android:id="@+id/item_publish_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish_topic"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xxl" />

    <TextView
        android:id="@+id/item_publish_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/item_publish_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_publish_topic"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_l" />

        <TextView
            android:id="@+id/item_publish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_publish_time"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_l" />
    </LinearLayout>

</LinearLayout>